methods.picture.PictureMono3.scala.error
Erreur de compilation :
PictureMono3:5: error: '=>' expected but '=' found.
      case i=3 => gauche()
            ^